# smell_demo

./: .gitignore  README.md  pyproject.toml
demo_1/: Dewei Feng - pyrfume scraping.ipynb  contrastive_learning_testing.ipynb  demo_gcms_encoder_2025-04-04 18_09_38.637551.pt  demo_gcms_encoder_2025-04-04 19_51_45.877927.pt  demo_gcms_encoder_2025-04-04 19_54_12.960284.pt  demo_gcms_encoder_2025-04-04 19_55_58.162215.pt  demo_sensor_encoder_2025-04-04 18_09_38.637643.pt  demo_sensor_encoder_2025-04-04 19_51_45.878019.pt  demo_sensor_encoder_2025-04-04 19_54_12.960376.pt  demo_sensor_encoder_2025-04-04 19_55_58.162315.pt  demo_smell_contrastive_learning_gradient_method.ipynb  demo_smell_contrastive_learning_gradient_method_edited.ipynb  gcms_dataframe.csv  gcms_encoder_2025-10-18 17:46:47.181752.pt  infer.py  sensor_encoder_2025-10-18 17:46:47.181755.pt  smell_contrastive_learning copy.json  smell_contrastive_learning.ipynb  train.py
demo_2/: config.py  data_loader.py  long_overlap_first_4_scaler_20251022_143356.pkl  long_overlap_first_4_win60_str5_procstandard_scaler_diff_data_like_20251022_143356.pt  quick_train.py  test_online.py  to_csv.py  train.py  visualize.py
demo_3/: config.py  data_loader.py  quick_train.py  requirements.txt  test_online.py  to_csv.py  train.py  visualize.py
demo_4/: config.py  to_csv.py
demo_5/: requirements.txt  to_csv.py  train.py
demo_data/: cloves.0d69202791d1.csv  cumin.ff6de217fab1.csv  oregano.a44fda9f8acd.csv  peanuts.50d6a8a2348d.csv  test-demo-ambient.6b05bbb07d28.csv
demo_data_unsorted/: ambient.61a9318b12d6.csv  visualize.py
(+1016 files in other folders)
