[project]
name = "smell-demo-contrastive-learning"
version = "0.1.0"
description = "Contrastive learning models for smell sensor and GCMS data"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]
